# nextcloud-talk-hermes-plugin

./: DEEP_DIVE_REPORT.md  MANUAL_TEST_GUIDE.md  MANUAL_TEST_GUIDE_ko.md  README.md  README_ko.md  SECURITY_AUDIT.md  pyproject.toml
tests/: conftest.py  test_adapter.py  test_fixes.py  test_integration.py
