[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextcloud-talk-hermes-plugin"
version = "0.1.0"
description = "Hermes Agent plugin for Nextcloud Talk platform integration"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]